--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "morgan": "^1.9.1",
-    "valid-url": "^1.0.9"
+    "uuid": "^3.3.3",
+    "valid-url": "^1.0.9",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
